--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Мой первый сайт</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-   <!--- <link rel="stylesheet" href="CSS/normalize.css"> --->
-</head>
+   </head>
 <body>
     <div class="line"><img src="Images/BlueLine.png" alt="Синяя линия" title="Синяя линия"></div>
     <header class="header">
@@ -24,7 +23,7 @@
             <ul class="navbt">
                      <li class="navbr"><a href="#">HOME PAGE</a></li>
                      <li class="navbr"><a href="#">OUR SERVICES</a></li>
-<!-- -->                     <li class="navbr"><a href="#">OUR SOLUTIONS</a></li>
+                     <li class="navbr"><a href="#">OUR SOLUTIONS</a></li>
                      <li class="navbr"><a href="#">PRICE OFFER</a></li>
                      <li class="navbr"><a href="#">PHOTOGALLERY</a></li>
                      <li><a href="#">CONTACT</a></li>
